[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://assets/progress_bg.png" type="Texture" id=2]
[ext_resource path="res://assets/progress_fill.png" type="Texture" id=3]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 0.2, 0.1, 0.4 )

[sub_resource type="StreamTexture" id=2]
resource_local_to_scene = true
flags = 4
load_path = "res://.import/disconnected.png-8029b9009e16446b9430a460c36671a8.stex"

[node name="Main" type="Spatial"]
script = ExtResource( 1 )

[node name="Paddle" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.03 )
mesh = SubResource( 1 )
material/0 = null

[node name="ClippedCamera" type="ClippedCamera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.970443, 0.241329, 0, -0.241329, 0.970443, 0, 0.197, 0.755 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MissionControl" type="GridContainer" parent="Control"]
margin_left = 7.79291
margin_top = 9.6465
margin_right = 345.793
margin_bottom = 586.646
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 16
custom_constants/hseparation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Connection" type="HBoxContainer" parent="Control/MissionControl"]
margin_right = 338.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Control/MissionControl/Connection"]
margin_top = 8.0
margin_right = 167.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "MAC"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MAC" type="TextEdit" parent="Control/MissionControl/Connection"]
margin_left = 171.0
margin_right = 338.0
margin_bottom = 30.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 3
text = "70F209016500"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Connect" type="Button" parent="Control/MissionControl"]
margin_top = 46.0
margin_right = 338.0
margin_bottom = 78.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
text = "Connect"
icon = SubResource( 2 )

[node name="Throttle" type="HBoxContainer" parent="Control/MissionControl"]
margin_top = 94.0
margin_right = 338.0
margin_bottom = 126.0

[node name="Label" type="Label" parent="Control/MissionControl/Throttle"]
margin_top = 9.0
margin_right = 78.0
margin_bottom = 23.0
size_flags_horizontal = 3
text = "Throttle"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="TextureProgress" parent="Control/MissionControl/Throttle"]
margin_left = 82.0
margin_right = 338.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
value = 50.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )

[node name="Stabilisation" type="CheckBox" parent="Control/MissionControl"]
margin_top = 142.0
margin_right = 338.0
margin_bottom = 166.0
text = "Stabilisation"
align = 1

[node name="Label" type="Label" parent="Control/MissionControl"]
margin_top = 182.0
margin_right = 338.0
margin_bottom = 196.0
text = "Throttle Mode"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mode" type="HBoxContainer" parent="Control/MissionControl"]
margin_top = 212.0
margin_right = 338.0
margin_bottom = 232.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="All" type="Button" parent="Control/MissionControl/Mode"]
margin_right = 29.0
margin_bottom = 20.0
text = "All"

[node name="X1" type="Button" parent="Control/MissionControl/Mode"]
margin_left = 33.0
margin_right = 61.0
margin_bottom = 20.0
text = "X1"

[node name="X2" type="Button" parent="Control/MissionControl/Mode"]
margin_left = 65.0
margin_right = 93.0
margin_bottom = 20.0
text = "X2"

[node name="X3" type="Button" parent="Control/MissionControl/Mode"]
margin_left = 97.0
margin_right = 125.0
margin_bottom = 20.0
text = "X3"

[node name="X4" type="Button" parent="Control/MissionControl/Mode"]
margin_left = 129.0
margin_right = 157.0
margin_bottom = 20.0
text = "X4"

[node name="GetAngles" type="Button" parent="Control/MissionControl"]
margin_top = 248.0
margin_right = 338.0
margin_bottom = 268.0
text = "Get Angles"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TelemetryTimer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="ControlTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true
[connection signal="button_up" from="Control/MissionControl/Connect" to="." method="_on_Button_button_up"]
[connection signal="button_up" from="Control/MissionControl/Mode/All" to="." method="_on_All_button_up"]
[connection signal="button_up" from="Control/MissionControl/Mode/X1" to="." method="_on_X1_button_up"]
[connection signal="button_up" from="Control/MissionControl/Mode/X2" to="." method="_on_X2_button_up"]
[connection signal="button_up" from="Control/MissionControl/Mode/X3" to="." method="_on_X3_button_up"]
[connection signal="button_up" from="Control/MissionControl/Mode/X4" to="." method="_on_X4_button_up"]
[connection signal="button_up" from="Control/MissionControl/GetAngles" to="." method="_on_GetAngles_button_up"]
[connection signal="timeout" from="TelemetryTimer" to="." method="_on_TelemetryTimer_timeout"]
[connection signal="timeout" from="ControlTimer" to="." method="_on_Timer_timeout"]
